# solang-op-assign-bug

./: Cargo.toml  README.md  bug.sol  issue1521.sol  issue1522.sol  issue1523.sol  issue1524.sol  issue1525.sol  issue1526.sol
src/: main.rs
